[package]
name = "graph-easy-layout"
version = "0.1.0"
edition = "2021"
authors = ["Graph Easy Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# For the grid-based layout
petgraph = "0.6"

# For pathfinding (A* algorithm)
pathfinding = "4.0"

# Console error panic hook for better debugging
console_error_panic_hook = { version = "0.1", optional = true }

# wee_alloc: smaller WASM binary size
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["console_error_panic_hook"]
